testcases/bindgen/132/error_message.txt
error: expected outer doc comment
  --> <anon>:10:5
   |
10 |     /*!<  integer sign      */
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: inner doc comments like this (starting with `//!` or `/*!`) can only appear before items